source/stylesheets/seg_special.css
/*custom.css*/
html, body {
    max-width: 100%;
    overflow-x: hidden;
    /*font-family: 'Source Sans Pro', sans-serif;*/
}
.fullWidth {
   padding: 10px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
   max-width: initial;
}
.text{
  margin-top:5%;
  font-family: 'Source Sans Pro', sans-serif;
  font-size:28px;
}
.logo{
  float: left;
  transition: opacity 0.7s ease;
}
.top-bar-section .right{margin-right: 4%;}

.logo img{
  display: block;
  margin-top: 5px;
  width:65px;
  height:65px;
}
.top_logo{
  transition: opacity 0.7s ease;
}
.top_logo:hover{
  opacity: .7;
}
.logo_txt{
  margin-left: 86px;
  /*line-height: 1.56rem !important;*/
}
/*.name .logo_txt{line-height: .56rem !important;}*/

.logo-txt_color br{
  display: block;
  margin: 10px 0;
}
.head_full {
   padding: 5px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
   max-width: initial;
}
.text_center{
text-align: center;
vertical-align: middle;
line-height: 90px;
}
.text_center_team{
text-align: center;
vertical-align: middle;
line-height: 90px;
margin-top: 15%;
}
.text_center_line{
text-align: center;
vertical-align: middle;
line-height: 30px;
}
.nav_head{
	margin:0;
	font-family: 'Muli', sans-serif;

}
.margin_top{
  margin-top: 50px;
}
.back_color{
	background-color: #E04D25;
  /*background-color: #000000;*/
	/*width:100%;*/
}
.top_action{
	margin-top: 47px;
	font-family: 'Muli', sans-serif;

}
.txt_logo{
	margin: 22px 0px;
}

.pic_cluster{
	/*margin: 8% 0px;*/
	text-align: center;
}
.profile{
  display: none;
	padding: 0px 10%;
	font-family: 'Muli', sans-serif;
	/*box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);*/
	/*border: solid 4px #FFFFFF;*/
}
.txt_hide{
  display: none;

}
.stat_txt{
	font-family: 'Muli', sans-serif;
	text-align: center;

}
.logo_col{
  font-family: 'Muli', sans-serif;
  color: #FFFFFF;
}
.cusd{
  margin: 0 auto;
  display: block;
  height:80px;
  width:80px;
  transition: opacity 0.7s ease;
}
.cusd:hover{
  opacity: .85;
}

.bleh{
  display: block;
  margin: 0 auto;
}
.valign{
 display:table-cell;
  vertical-align:middle;
}
.midMaker{
  color: red;

}
.video_color{
  background-color: #ADD8E6;
  height:340px;
  width: 800px;
  opacity: 0.5;
}
.video_color_last{
  background-color: #ADD8E6;
  height:240px;
  width: 800px;
  opacity: 0.5;
}
.row1{
  height:340px;
  width:100%;
}
.row2{
  height:340px;
  width:100%;
}
.row3{
  height:240px;
  width:100%;
}
.row8{
  height:250px;
  width:100%;
}
.cover{
  height: 340px;
  background: url(http://www.civilwarmed.org/wp-content/uploads/2016/09/Pry-House-SketchCover-1024x379.jpg);
    background-size: cover;
}
.top_padding{
  margin-top: 30px;
  margin-bottom: 30px;
}
.top_padding_teams{
  margin-top: 30px;
  margin-bottom: 21px;
}
.profile_teams{
  display: inherit;
  padding: 0px 10%;
  font-family: 'Muli', sans-serif;
  margin-left: 0;
  /*box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);*/
  /*border: solid 4px #FFFFFF;*/
}
.profile_teams_members{
  display: inherit;
  margin-left: 0px;
  padding: 0px 10%;
  font-family: 'Muli', sans-serif;
  /*box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);*/
  /*border: solid 4px #FFFFFF;*/
}
.profile_vam{
  display: inherit;
  padding: 0px 10%;
  font-family: 'Muli', sans-serif;
  margin-left: 180px;
  /*box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);*/
  /*border: solid 4px #FFFFFF;*/
}

.grey_back{
  padding-bottom: 100px;
  background-color: #A9A9A9;
}
.logo_adjust{
  margin-left: 3% !important;
}
@media screen and (min-width: 0px) and (max-width: 641px) {
  .adjuster{margin-right: 0% !important;}
  .logo_adjust{margin-left: 0% !important;}
  .sml_fix_left{clear: left !important;}
  .sml_fix_right{clear: right !important;}


}
.grower{
 font-size: 1.2em !important; 
}
.donate{
  background-color: #008CBA !important;
}
.col_white{
  color: #FFFFFF;
}

/*hero image*/
.homepage_hero{
background: url(../img/hero.jpg) no-repeat;
background-size: cover;
height: 270px;
position: relative;
text-align: left;
}
.hero_cont h4{
    margin: 0;
    padding: 13% 24%;
    position: absolute;
}
.txt_center{
  vertical-align: middle;
}
.text_center_vam{
  margin-right: 70px;
}
.text_center_members{
  margin-left: 30px;
}
.archi_hero{
background: url("../img/hero.jpg") repeat scroll 0 0 #074E68;
  background-size: 300px 100%;
    height: 200px;
    position: relative;
    text-align: left;
}
.foot_hero{
  background:url(../images/project-photos/seg_hero_blue.jpg) no-repeat;


/*  background:   linear-gradient(
    rgba(153, 207, 224, 0.45), 
    rgba(153, 207, 224, 0.45)
  ),url(../img/seg-hero.jpg) no-repeat;
  */

  /*background: url("../img/seg-hero.jpg") repeat scroll 0 0 #074E68;*/
  background-position: 41% 56%;
  background-size: 100%;
  height: 275px;
  position: relative;
  text-align: left;

}
/*vimeo video stuff*/
.vid_background{
  /*margin-top:3px !important;*/
  background-color: #377898;
  opacity: 0.9;
}

/*.vid_background {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  padding-top: 25px;
  height: 0;
}
.vid_background iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
*/

.foot_cont h4{
    /*margin: 0;*/
    font-weight: 900;
    margin-left:0%;
    padding: 1% 24%;
    position: absolute;
}
.upd_hero{
  background: url("../img/hero2.jpg") no-repeat;
  background-position: center;
  /*background-size: 100%;*/
    height: 250px;
    position: relative;
    text-align: left;
}
.upd_cont{
    /*margin: 0;*/
    padding: 2% 4%;
    /*position: absolute;*/
}
.button_fix{ 
  padding: 5% 0;
}
.button_fix a{ 
 background-color: #E04D25;
}
.caro_spacer{
  margin-bottom: 5%;
}
.img_min{
  width:200px;
  height:200px;
  transition: opacity 0.7s ease;
}
.img_min:hover{
  opacity:.8;
}
.big_txt{
  font-size: 4rem;
  font-weight: 500;
}
.thin_txt{
  font-weight: 200;
}
.side_fix{
  margin: 0 12%;
}
.icon_fix{
  text-align: center;
  padding-top: 10px;
}


/*stuff for blogs show more button*/
.read-more-state {
  display: none;
}

.read-more-target {
  opacity: 0;
  max-height: 0;
  font-size: 0;
  transition: .25s ease;
}

.read-more-state:checked ~ .read-more-wrap .read-more-target {
  opacity: 1;
  font-size: inherit;
  max-height: 999em;
}

.read-more-state ~ .read-more-trigger:before {
  content: 'Show more';
}

.read-more-state:checked ~ .read-more-trigger:before {
  content: 'Show less';
}

.read-more-trigger {
  cursor: pointer;
  display: inline-block;
  padding: 0 .5em;
  color: #666;
  font-size: .9em;
  line-height: 2;
  border: 1px solid #ddd;
  border-radius: .25em;
  visibility: inherit;
}
.top_space{
  margin-top: 21px;
}

.button_mod{
  padding:0.575rem 2.75rem 0.5375rem 2.75rem  !important;
  font-size: .9125rem;
  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
  margin:2%;
}
.spacer{
  /*padding:10px;*/
}


/*stat floating fix*/
@media screen and (min-width: 0px) and (max-width: 640px) {
  .tagger_1{
  }
  .tagger_2{
  }
}
@media screen and (min-width: 641px) {
  .tagger_1{
    float: right !important;

  }
  .tagger_2{
    float: left !important;
  }

}
.top_margin{
  margin-top: 8%;
}

.seg_logo{
  margin-left: 20%;
  height:137px;
  width:300px;
}
/*about image*/
.about_head{
color:#377898;
}
.about_hero{
background: url(../img/hero.jpg) no-repeat;
background-size: cover;
position: relative;
text-align: left;
height: 320px;
}
.about_cont h4{
    margin: 0;
    padding: 13% 24%;
    position: absolute;
}
.team_row{
  height:260px;
  width:207%;
}
.vam_logo{
  margin-left: 130px;
}
/*team image*/
.team_image{
background: url(../img/hero.jpg) no-repeat;
background-size: cover;
height: 320px;
position: relative;
text-align: left;
}
.research{
  margin: 0 auto;
  display: block;
  height:500px;
  width:800px;
  transition: opacity 0.7s ease;
}
.cusd_logo{
  margin: 0 auto;
  display: block;
  /*height:150px;*/
  /*width:154px;*/
  transition: opacity 0.7s ease;
}
/*.members{
  margin: 0 auto;
  display: block;
  height:150px;
  width:150px;
}*/

.member{ 
  margin:0;
/*  padding-top:4px;
  font-weight: 400;
  font-size:17px;*/
}

/*.member_info{
  font-size:15px;
  font-weight: 300;
  line-height:18px;
}*/

.vam-text{
  float: right;
}

.year {
  color: #377898;
}

